[package]
name = "rwkv_tokenizer"
version = "0.4.7"
edition = "2021"
authors = ["Cahya Wirawan <cahya.wirawan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rwkv_tokenizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
regex = "1.10.4"
unescape = "0.1.0"
