[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rwkv_tokenizer"
version = "0.5.2"
requires-python = ">=3.8"
description = "RWKV Tokenizer"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["LLM", "RWKV", "Language Model"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://github.com/cahya-wirawan/rwkv-tokenizer"
documentation = "https://github.com/cahya-wirawan/rwkv-tokenizer"
repository = "https://github.com/cahya-wirawan/rwkv-tokenizer"
changelog = "https://github.com/cahya-wirawan/rwkv-tokenizer/blob/master/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module"]

[project.optional-dependencies]
dev = ["pytest"]
