[package]
name = "rwkv-tokenizer"
version = "0.9.1"
edition = "2021"
authors = ["Cahya Wirawan <cahya.wirawan@gmail.com>"]
description = "A fast RWKV Tokenizer"
license = "Apache-2.0"
documentation = "https://github.com/cahya-wirawan/rwkv-tokenizer"
exclude = []

[dependencies]
regex = "1.10.4"
unescape = "0.1.0"
rayon = "1.10.0"
