[package]
name = "pyrwkv_tokenizer"
version = "0.9.0"
edition = "2021"
authors = ["Cahya Wirawan <cahya.wirawan@gmail.com>"]
description = "A fast RWKV Tokenizer"
license = "Apache-2.0"
documentation = "https://github.com/cahya-wirawan/rwkv-tokenizer"
exclude = [
    "data/performance-comparison.png",
    "rwkv_tokenizer/",
    "tools/",
    "tests/test_tokenization.py"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrwkv_tokenizer"
# Use ["cdylib", "lib"] for unit test
crate-type = ["cdylib"]
# crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = "0.21.2"
rwkv-tokenizer = "0.9.0"
rayon = "1.10.0"
